fix bug 108045. Don't crash on case where an xpt file is missing an interface info that was there when the manifest got built. Insead, fail gracefully and force the subsequent run to re-autoreg. r=jst sr=brendan